# transcrito-app

./: .gitignore  CHANGELOG.md  CHANGES.md  LICENSE  README.md  projectStructure.json  pylock.toml  report.xml  requirements-diarization.txt  requirements.txt  setup.cfg  sonar-project.properties
.github/workflows/: architecture.yml  ci.yml
docs/: ARCHITECTURE_GUIDELINES.MD  CLI_OPTIONS.md  EVOLUTION_RULES.MD  PROJECT_GUIDELINES.MD  README.md  USAGE.md
docs/agents/: README.md  architecture-reviewer.md  cli-evolver.md  docs-maintainer.md  feature-planner.md  formatter-builder.md  test-writer.md  transcription-engine-adapter.md
docs/rules/: README.md  architecture.rules.md  cli.rules.md  documentation.rules.md  feature-evolution.rules.md  formatters-writers.rules.md  testing.rules.md
scripts/: evaluate_architecture.sh  test_coverage.sh
src/: main.py
src/application/: safe_paths.py  speaker_assigner.py  transcribe_video.py
src/application/formatters/: base_formatter.py  srt_formatter.py  timestamp_formatter.py
src/application/utils/: time_formatter.py
src/application/writers/: base_writer.py  errors.py  file_writer.py
src/domain/: transcription.py  transcription_errors.py  transcription_service.py
src/infrastructure/: diarization_provider.py  whisper_transcription_service.py
tests/: test_cli_commands.py  test_contracts.py  test_file_writer.py  test_main.py  test_speaker_assigner.py  test_srt_formatter.py  test_time_formatter.py  test_timestamp_formatter.py  test_transcribe_video.py  test_whisper_transcription_service.py
(+1 files in other folders)
