[metadata]
name = transcrito-app
version = 0.1.0
description = CLI app for video transcription

[options]
packages = find:
package_dir =
    = src
install_requires =
    # Note: do NOT reference requirements.txt here (setuptools does not
    # accept '-r' syntax). Developers should install dependencies with:
    #
    #   pip install -r requirements.txt
    #
    # If you want to list runtime dependencies here, add them as package
    # names (e.g. openai-whisper, torch) — one per line below.

[options.packages.find]
where = src
